Fixing section margins on mobile

--- a/css/media.css
+++ b/css/media.css
@@ -18,6 +18,9 @@
   .section {
     margin-top: 1.5em;
   }
+  .section:first-of-type {
+    margin-top: 0;
+  }
 
   .teaser-grid {
     display: flex;
